block explorer links

--- a/embedded.html
+++ b/embedded.html
@@ -101,7 +101,7 @@
       </div>
       <br>
     </section>
-
+<!-- 
     <section class="block__help">
 
       <h2 translate="GEN_Help_0">
@@ -182,7 +182,7 @@
         </li>
       </ul>
 
-    </section>
+    </section> -->
 
   </article>
 
