--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
       </div>
       <br>
     </section>
-
+<!-- 
     <section class="block__help">
 
       <h2 translate="GEN_Help_0">
@@ -439,7 +439,7 @@
         </li>
       </ul>
 
-    </section>
+    </section> -->
 
   </article>
 
