--- a/cx-wallet.html
+++ b/cx-wallet.html
@@ -627,7 +627,7 @@
           </button>
           <h3 class="modal-title text-warning">
             <span translate="NAV_ViewWallet">
-              View Wallet Info
+              View Wallet InfoView Wallet Info
             </span>:
             {{viewWallet.nick}}
           </h3>
@@ -5680,7 +5680,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
         <h1 translate="NAV_CheckTxStatus">
           Check TX Status
         </h1>
-        <p translate="tx_Summary"></p>
+        <!-- <p translate="tx_Summary"></p> -->
       </section>
 
       <section class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
