--- a/index.html
+++ b/index.html
@@ -2693,7 +2693,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
         <h1 translate="NAV_CheckTxStatus">
           Check TX Status
         </h1>
-        <p translate="tx_Summary"></p>
+        <!-- <p translate="tx_Summary"></p> -->
       </section>
 
       <section class="col-xs-12 col-sm-6 col-sm-offset-3 text-center">
