social icons and text updates

--- a/cx-wallet.html
+++ b/cx-wallet.html
@@ -20,29 +20,41 @@
 <meta name="twitter:description" content="Trinity Web Wallet. Interact with the Trinity blockchain easily & securely.">
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
+
+
+<link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+<link rel="manifest" href="/images/favicon/manifest.json">
+<meta name="msapplication-TileColor" content="#ffffff">
+<meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
+<meta name="theme-color" content="#ffffff">
+
+
 <!-- <meta name="google-site-verification" content="IpChQ00NYUQuNs_7Xs6xlnSdzalOlTUYbBsr8f7OpvM" /> -->
-<link href="images/fav/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
-<link href="images/fav/favicon-32x32.png" rel="icon" type="image/png" sizes="32x32">
-<link href="images/fav/favicon-16x16.png" rel="icon" type="image/png" sizes="16x16">
-<link href="images/fav/manifest.json" rel="manifest">
-<link href="images/fav/safari-pinned-tab.svg" rel="mask-icon" color="#2f99b0">
-<link href="images/fav/favicon.ico" rel="shortcut icon">
-<meta name="apple-mobile-web-app-title" content="MyEtherWallet &middot; Your Key to Ethereum">
-<meta name="application-name" content="MyEtherWallet">
+<meta name="apple-mobile-web-app-title" content="Trinity Web Wallet. Interact with the Trinity blockchain easily & securely.">
+<meta name="application-name" content="Trinity Web Wallet">
 <meta name="msapplication-config" content="images/fav/browserconfig.xml">
-<meta name="theme-color" content="#1d6986">
-<meta name="apple-mobile-web-app-status-bar-style" content="#1d6986">
+<meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
+
 <meta property="og:url" content="https://wallet.trinityfx.org" />
-<meta property="og:title" content="MyEtherWallet.com  &middot; Your Key to Ethereum" />
+<meta property="og:title" content="Trinity Web Wallet. Interact with the Trinity blockchain easily & securely." />
 <meta property="og:type" content="website">
-<meta property="og:image" content="/images/myetherwallet-logo-banner.png" />
-<meta property="og:image" content="/images/myetherwallet-logo.png" />
-<meta property="og:image" content="/images/myetherwallet-logo-square.png" />
-<meta property="og:image" content="/images/myetherwallet-banner-fun.jpg" />
-<meta name="twitter:image" content="/images/myetherwallet-logo-twitter.png">
+<meta property="og:image" content="/images/trinity.jpg" />
+<meta name="twitter:image" content="/images/trinity.jpg">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@MyEtherWallet">
-<meta name="twitter:creator" content="@MyEtherWallet">
+<meta name="twitter:site" content="@trinityfxorg">
+<meta name="twitter:creator" content="@trinityfxorg">
 <script type="application/ld+json">
 {
 "@context": "http://schema.org",
@@ -50,13 +62,13 @@
 "name" : "Trinity Web Wallet",
 "legalName" : "",
 "url" : "https://wallet.trinityfx.org/"],
-"logo" : "https://wallet.trinityfx.org/images/myetherwallet-logo.png",
+"logo" : "https://wallet.trinityfx.org/images/trinity.jpg",
 "description": "Trinity Web Wallet. Interact with the Trinity blockchain easily & securely.",
 "sameAs" : [
   "https://wallet.trinityfx.org/",
   "https://twitter.com/trinityfxorg",
   "https://medium.com/trinityfx",
-  "https://github.com/trinityfx/trinity-web-wallet",
+  "https://github.com/trinityfx/trinity-wallet-web",
   "https://github.com/trinityfx"
 ]
 }
@@ -187,7 +199,7 @@
             <a tabindex="0" aria-label="nav item: {{tab.name | translate}}" translate="{{tab.name}}"></a>
       </li>
       <li class="nav-item help">
-        <a href="https://github.com/trinityfx/trinity-web-wallet/" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/trinityfx/trinity-wallet-web" target="_blank" rel="noopener noreferrer">
           <span translate="NAV_Help">
             Help
           </span>
