--- a/helpers.html
+++ b/helpers.html
@@ -198,6 +198,15 @@
   <a aria-hidden="true" ng-show="showLeftArrow" class="nav-arrow-left" ng-click="scrollLeft(100);" ng-mouseover="scrollHoverIn(true,2);" ng-mouseleave="scrollHoverOut()">&#171;</a>
   <div class="nav-scroll">
     <ul class="nav-inner">
+      <li class="nav-item help">
+        <a href="https://www.trinityfx.org" target="_blank" rel="noopener noreferrer">
+          <span>
+            <strong>
+            Visit TrinityFx.org
+          </strong>
+          </span>
+        </a>
+      </li>
       <li ng-repeat="tab in tabNames track by $index" \
           class="nav-item {{tab.name}}" \
           ng-class="{active: $index==gService.currentTab}"
