--- a/index.html
+++ b/index.html
@@ -197,6 +197,15 @@
   <a aria-hidden="true" ng-show="showLeftArrow" class="nav-arrow-left" ng-click="scrollLeft(100);" ng-mouseover="scrollHoverIn(true,2);" ng-mouseleave="scrollHoverOut()">&#171;</a>
   <div class="nav-scroll">
     <ul class="nav-inner">
+      <li class="nav-item help">
+        <a href="https://www.trinityfx.org" target="_blank" rel="noopener noreferrer">
+          <span>
+            <strong>
+            Visit TrinityFx.org
+          </strong>
+          </span>
+        </a>
+      </li>
       <li ng-repeat="tab in tabNames track by $index" \
           class="nav-item {{tab.name}}" \
           ng-class="{active: $index==gService.currentTab}"
@@ -2722,7 +2731,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
 
     <div class="cont-md" ng-show="txInfo.status == txStatus.mined">
       <h3 class="text-success" translate="tx_FoundOnChain"> Transaction Found </h3>
-      <h5> <a href="https://etherscan.io/tx/{{ tx.hash }}" target="_blank" rel="noopener noreferrer"> {{ tx.hash }} </a> </h5>
+      <h5> <a href="https://explorer.trinityfx.org/tx/{{ tx.hash }}" target="_blank" rel="noopener noreferrer"> {{ tx.hash }} </a> </h5>
       <p><strong translate="tx_FoundOnChain_1"></strong></p>
       <ul>
         <li translate="tx_FoundOnChain_2"></li>
@@ -2802,13 +2811,6 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
           </tr>
           <tr>
             <td>
-              <a class="account-help-icon"
-                 href="https://myetherwallet.github.io/knowledge-base/transactions/what-is-nonce.html"
-                 target="_blank"
-                 rel="noopener noreferrer">
-                   <img src="images/icon-help.svg" class="help-icon" />
-                  <p class="account-help-text" translate="NONCE_Desc"></p>
-              </a>
               <span translate="OFFLINE_Step2_Label_5">
                 Nonce
               </span>
@@ -2819,13 +2821,6 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
           </tr>
           <tr>
             <td>
-              <a class="account-help-icon"
-                 href="https://myetherwallet.github.io/knowledge-base/gas/what-is-gas-ethereum.html"
-                 target="_blank"
-                 rel="noopener noreferrer">
-                    <img src="images/icon-help.svg" class="help-icon" />
-                    <p class="account-help-text" translate="GAS_LIMIT_Desc"></p>
-              </a>
               <span translate="OFFLINE_Step2_Label_4">
                 Gas Limit
               </span>
@@ -2836,13 +2831,6 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
           </tr>
           <tr>
             <td>
-              <a class="account-help-icon"
-                 href="https://myetherwallet.github.io/knowledge-base/gas/what-is-gas-ethereum.html"
-                 target="_blank"
-                 rel="noopener noreferrer">
-                   <img src="images/icon-help.svg" class="help-icon" />
-                   <p class="account-help-text" translate="GAS_PRICE_Desc"></p>
-              </a>
               <span translate="OFFLINE_Step2_Label_3">
                 Gas Price
               </span>
