--- a/helpers.html
+++ b/helpers.html
@@ -4,21 +4,21 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<title>wallet.trinityfx.org</title>
+<title>wallet.akroma.io</title>
 
-<meta property="og:title" content="wallet.trinityfx.org - Trinity Web Wallet">
-<meta property="og:site_name" content="wallet.trinityfx.org - Trinity Web Wallet">
-<meta name="twitter:title" content="wallet.trinityfx.org - Trinity Web Wallet">
-<meta name="apple-mobile-web-app-title" content="wallet.trinityfx.org - Trinity Web Wallet">
-<link href="https://wallet.trinityfx.org" rel="canonical">
-<meta content="https://wallet.trinityfx.org" property="og:url">
-<meta content="https://wallet.trinityfx.org" name="twitter:url">
+<meta property="og:title" content="wallet.akroma.io - Akroma Web Wallet">
+<meta property="og:site_name" content="wallet.akroma.io - Akroma Web Wallet">
+<meta name="twitter:title" content="wallet.akroma.io - Akroma Web Wallet">
+<meta name="apple-mobile-web-app-title" content="wallet.akroma.io - Akroma Web Wallet">
+<link href="https://wallet.akroma.io" rel="canonical">
+<meta content="https://wallet.akroma.io" property="og:url">
+<meta content="https://wallet.akroma.io" name="twitter:url">
 <link rel="stylesheet" href="css/etherwallet-master.min.css">
 <script type="text/javascript" src="js/etherwallet-static.min.js"></script>
 <script type="text/javascript" src="js/etherwallet-master.js"></script>
-<meta name="description" content="Trinity Web Wallet. Interact with the Trinity blockchain easily & securely.">
-<meta property="og:description"  content="Trinity Web Wallet. Interact with the Trinity blockchain easily & securely.">
-<meta name="twitter:description" content="Trinity Web Wallet. Interact with the Trinity blockchain easily & securely.">
+<meta name="description" content="Akroma Web Wallet. Interact with the Akroma blockchain easily & securely.">
+<meta property="og:description"  content="Akroma Web Wallet. Interact with the Akroma blockchain easily & securely.">
+<meta name="twitter:description" content="Akroma Web Wallet. Interact with the Akroma blockchain easily & securely.">
 <meta name="robots" content="index,follow">
 <meta name="googlebot" content="index,follow">
 
@@ -43,34 +43,34 @@
 
 
 <!-- <meta name="google-site-verification" content="IpChQ00NYUQuNs_7Xs6xlnSdzalOlTUYbBsr8f7OpvM" /> -->
-<meta name="apple-mobile-web-app-title" content="Trinity Web Wallet. Interact with the Trinity blockchain easily & securely.">
-<meta name="application-name" content="Trinity Web Wallet">
+<meta name="apple-mobile-web-app-title" content="Akroma Web Wallet. Interact with the Akroma blockchain easily & securely.">
+<meta name="application-name" content="Akroma Web Wallet">
 <meta name="msapplication-config" content="images/fav/browserconfig.xml">
 <meta name="apple-mobile-web-app-status-bar-style" content="#ffffff">
 
-<meta property="og:url" content="https://wallet.trinityfx.org" />
-<meta property="og:title" content="Trinity Web Wallet. Interact with the Trinity blockchain easily & securely." />
+<meta property="og:url" content="https://wallet.akroma.io" />
+<meta property="og:title" content="Akroma Web Wallet. Interact with the Akroma blockchain easily & securely." />
 <meta property="og:type" content="website">
-<meta property="og:image" content="/images/trinity.jpg" />
-<meta name="twitter:image" content="/images/trinity.jpg">
+<meta property="og:image" content="/images/Akroma.jpg" />
+<meta name="twitter:image" content="/images/Akroma.jpg">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@trinityfxorg">
-<meta name="twitter:creator" content="@trinityfxorg">
+<meta name="twitter:site" content="@Akromafxorg">
+<meta name="twitter:creator" content="@Akromafxorg">
 <script type="application/ld+json">
 {
 "@context": "http://schema.org",
 "@type" : "Organization",
-"name" : "Trinity Web Wallet",
+"name" : "Akroma Web Wallet",
 "legalName" : "",
-"url" : "https://wallet.trinityfx.org/"],
-"logo" : "https://wallet.trinityfx.org/images/trinity.jpg",
-"description": "Trinity Web Wallet. Interact with the Trinity blockchain easily & securely.",
+"url" : "https://wallet.akroma.io/"],
+"logo" : "https://wallet.akroma.io/images/Akroma.jpg",
+"description": "Akroma Web Wallet. Interact with the Akroma blockchain easily & securely.",
 "sameAs" : [
-  "https://wallet.trinityfx.org/",
-  "https://twitter.com/trinityfxorg",
-  "https://medium.com/trinityfx",
-  "https://github.com/trinityfx/trinity-wallet-web",
-  "https://github.com/trinityfx"
+  "https://wallet.akroma.io/",
+  "https://twitter.com/Akromafxorg",
+  "https://medium.com/Akromafx",
+  "https://github.com/Akromafx/Akroma-wallet-web",
+  "https://github.com/Akromafx"
 ]
 }
 </script>
@@ -82,7 +82,7 @@
 
   <div class="small announcement annoucement-danger">
     <div class="container">
-      DON'T GET PHISHED, BOOKMARK <a href="https://wallet.trinityfx.org"> https://wallet.trinityfx.org</a>
+      DON'T GET PHISHED, BOOKMARK <a href="https://wallet.akroma.io"> https://wallet.akroma.io</a>
     </div>
   </div>
 
@@ -90,8 +90,8 @@
 <section class="bg-gradient header-branding">
   <section class="container">
       <a class="brand" href="/" aria-label="Go to homepage">
-        <!-- <img src="images/logo-myetherwallet.svg"   height="64px" width="245px" alt="Trinity Web Wallet" /> -->
-        <h1>Trinity Web Wallet</h1>
+        <!-- <img src="images/logo-myetherwallet.svg"   height="64px" width="245px" alt="Akroma Web Wallet" /> -->
+        <h1>Akroma Web Wallet</h1>
         <p class="small visible-xs">0.0.1</p>
       </a>
    
@@ -199,10 +199,10 @@
   <div class="nav-scroll">
     <ul class="nav-inner">
       <li class="nav-item help">
-        <a href="https://www.trinityfx.org" target="_blank" rel="noopener noreferrer">
+        <a href="https://www.akroma.io" target="_blank" rel="noopener noreferrer">
           <span>
             <strong>
-            Visit TrinityFx.org
+            Visit akroma.io
           </strong>
           </span>
         </a>
@@ -215,7 +215,7 @@
             <a tabindex="0" aria-label="nav item: {{tab.name | translate}}" translate="{{tab.name}}"></a>
       </li>
       <li class="nav-item help">
-        <a href="https://github.com/trinityfx/trinity-wallet-web" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/Akromafx/Akroma-wallet-web" target="_blank" rel="noopener noreferrer">
           <span translate="NAV_Help">
             Help
           </span>
@@ -986,7 +986,7 @@
           </a>
         </p>
         <p>
-           See <a href="https://github.com/trinityfx/trinity-wallet-web">https://github.com/trinityfx/trinity-wallet-web for complete licensing information.</a>
+           See <a href="https://github.com/akroma-project/akroma-wallet-web">https://github.com/akroma-project/akroma-wallet-web for complete licensing information.</a>
         </p>
       </a>
 
@@ -1003,7 +1003,7 @@
         <a aria-label="medium" title="medium" href="https://medium.com/trinityfx" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
           <svg width="24" height="24" class="footer__icon" aria-labelledby="medium icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7.45 2.67l5.38 11.74H13c.86-1.93 1.6-3.91 2.4-5.87s1.6-3.9 2.35-5.86h5.66a3.67 3.67 0 0 1-.24.35c-.42.47-.83 1-1.28 1.41a1.61 1.61 0 0 0-.48 1.23v13a1.08 1.08 0 0 0 .38.86c.44.39.86.8 1.28 1.21l.41.42h-8.77a2.81 2.81 0 0 1 .26-.33c.41-.39.82-.79 1.25-1.16a1.22 1.22 0 0 0 .44-1V9.33c0-.44 0-.88.07-1.31V7.3h-.13c-.08.16-.18.31-.24.48l-5.3 13c-.07.18-.16.35-.25.52h-.12L4.23 7.16h-.14V16.42a1.93 1.93 0 0 0 .43 1.26c.77 1 1.52 2 2.28 3 .1.13.18.27.32.46H.5c.1-.17.17-.29.25-.39.79-1.05 1.59-2.11 2.39-3.15a1.81 1.81 0 0 0 .4-1.17v-10a1.51 1.51 0 0 0-.33-1C2.57 4.67 2 3.85 1.34 3c-.07-.1-.13-.21-.23-.36z" fill="#ffffff" /></svg>
         </a>
-        <a aria-label="github" title="github" href="https://github.com/trinityfx/trinity-wallet-web" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
+        <a aria-label="github" title="github" href="https://github.com/akroma-project/akroma-wallet-web" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
           <svg width="24" height="24" class="footer__icon" aria-labelledby="github icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M12 .297c-6.63 0-12 5.373-12 12 0 5.303 3.438 9.8 8.205 11.385.6.113.82-.258.82-.577 0-.285-.01-1.04-.015-2.04-3.338.724-4.042-1.61-4.042-1.61C4.422 18.07 3.633 17.7 3.633 17.7c-1.087-.744.084-.729.084-.729 1.205.084 1.838 1.236 1.838 1.236 1.07 1.835 2.809 1.305 3.495.998.108-.776.417-1.305.76-1.605-2.665-.3-5.466-1.332-5.466-5.93 0-1.31.465-2.38 1.235-3.22-.135-.303-.54-1.523.105-3.176 0 0 1.005-.322 3.3 1.23.96-.267 1.98-.399 3-.405 1.02.006 2.04.138 3 .405 2.28-1.552 3.285-1.23 3.285-1.23.645 1.653.24 2.873.12 3.176.765.84 1.23 1.91 1.23 3.22 0 4.61-2.805 5.625-5.475 5.92.42.36.81 1.096.81 2.22 0 1.606-.015 2.896-.015 3.286 0 .315.21.69.825.57C20.565 22.092 24 17.592 24 12.297c0-6.627-5.373-12-12-12" fill="#ffffff" /></svg>
         </a>
       </p>
@@ -1027,13 +1027,13 @@
 
         <!-- <p class="small"><strong>Be safe &amp; secure:</strong> <a href="https://myetherwallet.github.io/knowledge-base/security/securing-your-ethereum.html" target="_blank" rel="noopener noreferrer"> We highly recommend that you read our guide on How to Prevent Loss &amp; Theft for some recommendations on how to be proactive about your security.</a></p> -->
 
-        <p class="small"><strong>Always backup your keys: </strong> Trinity Web Wallet is not a web application. You do not create an account or give us your funds to hold onto. No data leaves your computer / your browser. We make it easy for you to create, save, and access your information and interact with the blockchain.</p>
+        <p class="small"><strong>Always backup your keys: </strong> Akroma Web Wallet is not a web application. You do not create an account or give us your funds to hold onto. No data leaves your computer / your browser. We make it easy for you to create, save, and access your information and interact with the blockchain.</p>
 
-        <p class="small"><strong>We are not responsible for any loss: </strong> Trinity, Trinity Web Wallet, and the underlying libraries we use are under active development. There is always the possibility something unexpected happens that causes your funds to be lost. Please do not invest more than you are willing to lose, and please be careful.</p>
+        <p class="small"><strong>We are not responsible for any loss: </strong> Akroma, Akroma Web Wallet, and the underlying libraries we use are under active development. There is always the possibility something unexpected happens that causes your funds to be lost. Please do not invest more than you are willing to lose, and please be careful.</p>
 
         <p class="small"><strong> Offical Text: </strong> The English version of our website is the official text. </p>
 
-        <p class="small"><strong>MIT License</strong> See <a href="https://github.com/trinityfx/trinity-wallet-web">https://github.com/trinityfx/trinity-wallet-web for complete licensing information.</a></p>
+        <p class="small"><strong>MIT License</strong> See <a href="https://github.com/akroma-project/akroma-wallet-web">https://github.com/akroma-project/akroma-wallet-web for complete licensing information.</a></p>
 
         <p class="small"><strong>THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</strong></p>
       </div>
