--- a/index.html
+++ b/index.html
@@ -22,22 +22,19 @@
 <meta name="googlebot" content="index,follow">
 
 
-<link rel="apple-touch-icon" sizes="57x57" href="/images/favicon/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="/images/favicon/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="/images/favicon/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="/images/favicon/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="/images/favicon/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="/images/favicon/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="/images/favicon/apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="/images/favicon/apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon/android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="/images/favicon/favicon-96x96.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/images/favicon/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="/images/favicon/android-chrome-192x192.png">
 <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/images/favicon/favicon-32x32.png">
+<link rel="icon" type="image/x-icon" href="/images/favicon/favicon.ico">
 <link rel="manifest" href="/images/favicon/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="/images/favicon/ms-icon-144x144.png">
+<meta name="msapplication-TileImage" content="/images/favicon/ms-tile-70x70.png">
+<meta name="msapplication-TileImage" content="/images/favicon/ms-tile-144x144.png">
+<meta name="msapplication-TileImage" content="/images/favicon/ms-tile-150x150.png">
+<meta name="msapplication-TileImage" content="/images/favicon/ms-tile-310x150.png">
+<meta name="msapplication-TileImage" content="/images/favicon/ms-tile-310x310.png">
+<link rel="mask-icon" href="/images/favicon/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="theme-color" content="#ffffff">
 
 
@@ -53,8 +50,8 @@
 <meta property="og:image" content="/images/Akroma.jpg" />
 <meta name="twitter:image" content="/images/Akroma.jpg">
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="@Akromafxorg">
-<meta name="twitter:creator" content="@Akromafxorg">
+<meta name="twitter:site" content="@akroma_io">
+<meta name="twitter:creator" content="@akroma_io">
 <script type="application/ld+json">
 {
 "@context": "http://schema.org",
@@ -66,10 +63,10 @@
 "description": "Akroma Web Wallet. Interact with the Akroma blockchain easily & securely.",
 "sameAs" : [
   "https://wallet.akroma.io/",
-  "https://twitter.com/Akromafxorg",
-  "https://medium.com/Akromafx",
-  "https://github.com/Akromafx/Akroma-wallet-web",
-  "https://github.com/Akromafx"
+  "https://twitter.com/akroma_io",
+  "https://medium.com/akroma",
+  "https://github.com/akroma-project/akroma-wallet-web",
+  "https://github.com/akroma-project"
 ]
 }
 </script>
@@ -201,7 +198,7 @@
         <a href="https://www.akroma.io" target="_blank" rel="noopener noreferrer">
           <span>
             <strong>
-            Visit akroma.io
+            Visit Akroma.io
           </strong>
           </span>
         </a>
@@ -214,7 +211,7 @@
             <a tabindex="0" aria-label="nav item: {{tab.name | translate}}" translate="{{tab.name}}"></a>
       </li>
       <li class="nav-item help">
-        <a href="https://github.com/Akromafx/Akroma-wallet-web" target="_blank" rel="noopener noreferrer">
+        <a href="https://github.com/akroma-project/akroma-wallet-web" target="_blank" rel="noopener noreferrer">
           <span translate="NAV_Help">
             Help
           </span>
@@ -3579,7 +3576,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
 <section class="pre-footer">
   <div class="container">
     <p>
-      Trinity Web Wallet does not hold your keys for you. We cannot access accounts, recover keys, reset passwords, nor reverse transactions. Protect your keys &amp; always check that you are on correct URL.
+      Akroma Web Wallet does not hold your keys for you. We cannot access accounts, recover keys, reset passwords, nor reverse transactions. Protect your keys &amp; always check that you are on correct URL.
       <a role="link" tabindex="0" data-toggle="modal" data-target="#disclaimerModal">
         You are responsible for your security.
       </a>
@@ -3595,7 +3592,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
 
       <p>
         <span>
-          Free, open-source, client-side interface for generating Trinity wallets. 
+          Free, open-source, client-side interface for generating Akroma wallets. 
         </span>
       </p>
       
@@ -3619,13 +3616,10 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
 
     <section class="footer--righ">
       <p>
-        <!-- <a aria-label="join our slack" title="slack" href="https://myetherwallet.herokuapp.com/" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
-          <svg width="24" height="24" class="footer__icon" aria-labelledby="slack icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path fill="#ffffff" d="M9.879 10.995l1.035 3.085 3.205-1.074-1.035-3.074-3.205 1.08v-.017z"/><path d="M18.824 14.055l-1.555.521.54 1.61c.218.65-.135 1.355-.786 1.574-.15.045-.285.067-.435.063-.511-.015-.976-.338-1.155-.849l-.54-1.607-3.21 1.073.539 1.608c.211.652-.135 1.358-.794 1.575-.15.048-.285.067-.435.064-.51-.015-.976-.34-1.156-.85l-.539-1.619-1.561.524c-.15.045-.285.061-.435.061-.511-.016-.976-.345-1.155-.855-.225-.66.135-1.364.78-1.575l1.56-.525L7.5 11.76l-1.551.525c-.141.048-.285.066-.428.064-.495-.016-.975-.338-1.141-.848-.209-.65.135-1.354.796-1.574l1.56-.52-.54-1.605c-.21-.654.136-1.359.796-1.575.659-.22 1.363.136 1.574.783l.539 1.608L12.3 7.544l-.54-1.605c-.209-.645.135-1.35.789-1.574.652-.211 1.359.135 1.575.791l.54 1.621 1.555-.51c.651-.219 1.356.135 1.575.779.218.654-.135 1.359-.784 1.575l-1.557.524 1.035 3.086 1.551-.516c.652-.211 1.358.135 1.575.795.22.66-.135 1.365-.779 1.574l-.011-.029zm4.171-5.356C20.52.456 16.946-1.471 8.699 1.005.456 3.479-1.471 7.051 1.005 15.301c2.475 8.245 6.046 10.17 14.296 7.694 8.245-2.475 10.17-6.046 7.694-14.296z" fill="#ffffff" /></svg>
-        </a> -->
-        <a aria-label="twitter" title="twitter" href="https://twitter.com/trinityfxorg" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
+        <a aria-label="twitter" title="twitter" href="https://twitter.com/akroma_io" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
           <svg width="24" height="24" class="footer__icon" aria-labelledby="twitter icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M23.954 4.569c-.885.389-1.83.654-2.825.775 1.014-.611 1.794-1.574 2.163-2.723-.951.555-2.005.959-3.127 1.184-.896-.959-2.173-1.559-3.591-1.559-2.717 0-4.92 2.203-4.92 4.917 0 .39.045.765.127 1.124C7.691 8.094 4.066 6.13 1.64 3.161c-.427.722-.666 1.561-.666 2.475 0 1.71.87 3.213 2.188 4.096-.807-.026-1.566-.248-2.228-.616v.061c0 2.385 1.693 4.374 3.946 4.827-.413.111-.849.171-1.296.171-.314 0-.615-.03-.916-.086.631 1.953 2.445 3.377 4.604 3.417-1.68 1.319-3.809 2.105-6.102 2.105-.39 0-.779-.023-1.17-.067 2.189 1.394 4.768 2.209 7.557 2.209 9.054 0 13.999-7.496 13.999-13.986 0-.209 0-.42-.015-.63.961-.689 1.8-1.56 2.46-2.548l-.047-.02z" fill="#ffffff" /></svg>
         </a>
-        <a aria-label="medium" title="medium" href="https://medium.com/trinityfx" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
+        <a aria-label="medium" title="medium" href="https://medium.com/akroma" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
           <svg width="24" height="24" class="footer__icon" aria-labelledby="medium icon" role="img" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M7.45 2.67l5.38 11.74H13c.86-1.93 1.6-3.91 2.4-5.87s1.6-3.9 2.35-5.86h5.66a3.67 3.67 0 0 1-.24.35c-.42.47-.83 1-1.28 1.41a1.61 1.61 0 0 0-.48 1.23v13a1.08 1.08 0 0 0 .38.86c.44.39.86.8 1.28 1.21l.41.42h-8.77a2.81 2.81 0 0 1 .26-.33c.41-.39.82-.79 1.25-1.16a1.22 1.22 0 0 0 .44-1V9.33c0-.44 0-.88.07-1.31V7.3h-.13c-.08.16-.18.31-.24.48l-5.3 13c-.07.18-.16.35-.25.52h-.12L4.23 7.16h-.14V16.42a1.93 1.93 0 0 0 .43 1.26c.77 1 1.52 2 2.28 3 .1.13.18.27.32.46H.5c.1-.17.17-.29.25-.39.79-1.05 1.59-2.11 2.39-3.15a1.81 1.81 0 0 0 .4-1.17v-10a1.51 1.51 0 0 0-.33-1C2.57 4.67 2 3.85 1.34 3c-.07-.1-.13-.21-.23-.36z" fill="#ffffff" /></svg>
         </a>
         <a aria-label="github" title="github" href="https://github.com/akroma-project/akroma-wallet-web" target="_blank" rel="noopener noreferrer" role="link" tabindex="0">
