Add logo and font (#3)
* Update logo images on paper wallet

* Update font, add logo to banner

--- a/helpers.html
+++ b/helpers.html
@@ -87,8 +87,8 @@
 <section class="bg-gradient header-branding">
   <section class="container">
       <a class="brand" href="/" aria-label="Go to homepage">
-        <!-- <img src="images/logo-myetherwallet.svg"   height="64px" width="245px" alt="Akroma Web Wallet" /> -->
-        <h1>Akroma Web Wallet</h1>
+        <img src="images/logo-akroma-web-wallet.svg"   height="64px" width="245px" alt="Akroma Web Wallet" />
+        <!-- <h1>Akroma Web Wallet</h1> -->
         <p class="small visible-xs">0.0.1</p>
       </a>
    
