--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 <section class="bg-gradient header-branding">
   <section class="container">
       <a class="brand" href="/" aria-label="Go to homepage">
-        <!-- <img src="images/logo-myetherwallet.svg"   height="64px" width="245px" alt="Akroma Web Wallet" /> -->
-        <h1>Akroma Web Wallet</h1>
+        <img src="images/logo-akroma-web-wallet.svg"   height="64px" width="245px" alt="Akroma Web Wallet" />
+        <!-- <h1>Akroma Web Wallet</h1> -->
         <p class="small visible-xs">0.0.1</p>
       </a>
    
@@ -3525,7 +3525,7 @@ Rate: {{swapOrder.swapRate}} {{swapOrder.swapPair}}</textarea>
 <div class="tab-pane" id="panePrint" style="display: none;">
   <div class="print-container">
     <span id="printwalletjson" style="display: none;"></span>
-    <img src="images/logo-ethereum-1.png" class="ether-logo-1" height="100%" width="auto" />
+    <img src="images/logo-akroma-1.png" class="ether-logo-1" height="100%" width="auto" />
     <img src="images/logo-ethereum-2.png" class="ether-logo-2" />
     <img src="images/print-sidebar.png" height="100%" width="auto" class="print-title" />
     <div class="print-qr-code-1">
